# swisslipidsreact

./: .gitignore  README.md  merge_results.py  pyproject.toml
data/: lipids_10rows_example.tsv
results_C16/: 20250627_180117_FA_per_class_filtering.tsv  20250627_180117_enumerated_reactions.tsv  20250627_180117_summary_results.tsv  reactions_curated_FA_20250627_181931.ttl
results_curated_list/: 20250627_180315_FA_per_class_filtering.tsv
src/: swisslipidreact.py
src/swisslipidreact/: RheaToSwisslipidsDf.py  SwissLipids.py  main.py  ttl_export.py
src/swisslipidsreact/: FA_lists.py  MasterIdAnalysis.py  RheaToSwisslipidsDf.py  SwissLipids.py  cli.py  main.py  ttl_export.py
src/swisslipidsreact/package_data/: FA per class per position.tsv  lipids_7rows_extra_CoAs.tsv
src/swisslipidsreact/package_data/components_correction/: free fatty acids per compound.tsv  sn1 per compound.tsv  sn2 per compound.tsv
