[project]
name = "swisslipidsreact"
version = "0.1.0"
description = "SwissLipids Reaction Enumeration Pipeline"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name="Your Name", email="your@email.com" }
]
license = { text = "MIT" }
dependencies = [
    "pandas>=1.5",
    "networkx>=2.8",
    "tqdm",
    "pyrheadb", 
    "platformdirs",
]

[project.scripts]
swisslipidsreact = "swisslipidsreact.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# explicitly include your data files
"swisslipidsreact.package_data" = ["*.tsv", "*.csv"]